--- a/Barycentric_coordinates_3/test/Barycentric_coordinates_3/CMakeLists.txt
+++ b/Barycentric_coordinates_3/test/Barycentric_coordinates_3/CMakeLists.txt
@@ -15,6 +15,7 @@ if(CGAL_FOUND)
   create_single_source_cgal_program("test_tetrahedron_coordinates.cpp")
   create_single_source_cgal_program("test_wp_tetrahedron.cpp")
   create_single_source_cgal_program("test_wp_weights.cpp")
+  create_single_source_cgal_program("test_dh_weights.cpp")
 
 else()
   message(WARNING "This program requires the CGAL library, and will not be compiled.")
