--- a/Boolean_set_operations_2/demo/Boolean_set_operations_2/CMakeLists.txt
+++ b/Boolean_set_operations_2/demo/Boolean_set_operations_2/CMakeLists.txt
@@ -62,7 +62,9 @@ if (CGAL_FOUND AND CGAL_Qt5_FOUND AND Qt5_FOUND )
     include/QT5/Piecewise_region_graphics_item.h
     include/QT5/Piecewise_set_graphics_item.h
     include/QT5/Graphics_view_linear_polygon_input.h
+    include/QT5/Graphics_view_polyline_input.h
     include/QT5/Linear_polygons.h
+    include/QT5/Polyline_curves.h
     include/QT5/General_polygon_2.h
     include/QT5/General_polygon_set_2.h
     include/QT5/General_polygon_set_on_surface_2.h
