--- a/Barycentric_coordinates_3/examples/Barycentric_coordinates_3/CMakeLists.txt
+++ b/Barycentric_coordinates_3/examples/Barycentric_coordinates_3/CMakeLists.txt
@@ -16,6 +16,7 @@ if(CGAL_FOUND)
   create_single_source_cgal_program("tetrahedron_coordinates.cpp")
   create_single_source_cgal_program("shape_deformation.cpp")
   create_single_source_cgal_program("wachspress_coordinates.cpp")
+  create_single_source_cgal_program("discrete_harmonic_coordinates.cpp")
   create_single_source_cgal_program("mean_value_coordinates.cpp")
 
 else()
